# aie-group-3

./: .gitattributes  .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
project/: .dockerignore  Dockerfile  README.md  pyproject.toml  report.md  requirements.txt  self-checklist.md
project/artifacts/: README.md
project/artifacts/catboost_info/cb_Y1/: catboost_training.json  learn_error.tsv  time_left.tsv
project/artifacts/catboost_info/cb_Y1/learn/: events.out.tfevents
project/artifacts/catboost_info/cb_Y2/: catboost_training.json  learn_error.tsv  time_left.tsv
project/artifacts/catboost_info/cb_Y2/learn/: events.out.tfevents
project/artifacts/metrics/: model_selection.json  results_summary.csv
project/artifacts/models/: StackingTuned_Y1.pkl  best_model_manifest.json
project/configs/: .env.example  README.md  data.yaml  experiment.yaml  serving.yaml
project/notebooks/: 01_eda.ipynb  02_experiments.ipynb  README.md  exp01_eda.ipynb  exp02_model_selection.ipynb  exp03_model_tuning.ipynb
project/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
project/notebooks/catboost_info/learn/: events.out.tfevents
project/src/: README.md  __init__.py  config.py  main.py  model_loader.py  predictor.py  service.py  train.py
project/src/features/: __init__.py  preprocess.py
project/src/models/: predictor.py  registry.py
project/src/service/: main.py  schemas.py
project/src/utils/: logging.py
project/tests/: __init__.py  conftest.py  test_api.py  test_data.py  test_models.py
(+49 files in other folders)
