[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.47.0",
]
